form set up, and creating state

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,11 @@ select {
   border-radius: 10px;
 }
 
+.bootOption {
+  justify-content: center;
+  text-align: center;
+}
+
 .hikeDetails p {
   color: white;
   font-size: 1em;
