--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,8 @@ select {
   color: white;
   font-size: 1em;
   margin: 2px;
+  text-align: left;
+  margin-left: 10%;
 }
 
 .UserInputForm {
@@ -165,7 +167,7 @@ textarea {
   display: flex;
   flex-direction: column;
   width: 70vw;
-  justify-content: space-evenly;
+  justify-content: space-between;
   height: 90vh;
 }
 
@@ -288,6 +290,7 @@ button.submit {
   text-align: center;
   margin: auto;
   padding: 0px;  
+  height: auto;
 }
 
 a {
