added the about section

--- a/src/index.css
+++ b/src/index.css
@@ -306,6 +306,7 @@ a {
   height: 100vh;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
 .EditHike .date {
@@ -330,4 +331,27 @@ a {
   flex-direction: column;
 }
 
+.About {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: var(--lightneutral)
+}
+
+.aboutDetailsContainer {
+  text-align: left;
+  margin-left: 30px;
+}
+
+img {
+  overflow: hidden;
+  height: auto;
+  width: 100vw;
+  object-fit: cover;
+  object-position: 30% 0;
+  
+}
 /* https://alvaromontoro.com/blog/67970/drawing-a-triangle-with-css */
